syntax = "proto3";

import "monitor_core_types.proto";

package monitor_web_socket;

// ## ToServer and sub-types
message ToServer {
  reserved 1;

  oneof msg {
    SubscribeToMetrics subscribeToMetrics = 2;
    Ping ping = 3;
  }
}

message SubscribeToMetrics {}

message Ping {
  bytes payload = 1;
}

// ## ToClient and sub-types
message ToClient {
  reserved 1, 2;

  oneof msg {
    MetricsUpdate metricsUpdate = 4;
    Pong pong = 3;
  }
}

message MetricsUpdate {
  repeated monitor_core_types.Metric metrics = 1;
}

message Pong {
  bytes payload = 1;
}